commented out things that need adjusted as temp and corrected spacing in footer

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -751,7 +751,7 @@ footer {
   }
 
   .footer-bottom {
-    padding: 10px 0; /* Reduce padding for the bottom text */
+    padding: 5px 0; /* Reduce padding for the bottom text */
     font-size: 12px; /* Slightly smaller font size */
   }
 }
